--- a/views/index.pug
+++ b/views/index.pug
@@ -1,49 +1,36 @@
-head
-  title app
-  link(href='https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css' rel='stylesheet' integrity='sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC' crossorigin='anonymous')
-  link(rel='stylesheet' href='/stylesheets/style.css')
-  script(src='https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js')
-header.fixed-top
-  nav.navbar.navbar-expand-lg.bg-light
-    .container-fluid
-      ul.nav.nav-pills
-        li.nav-item
-          a.nav-link.active(aria-current='page' href='#') My Mood-Four
-        li.nav-item
-          a.nav-link(href='#') Explore
-      ul#right-bar.nav.float-right
-        li.nav-item
-          a.nav-link(href=href) #{message}
-.container.bg-light
-  .row.align-items-center
-    .col-8
-      h2.display-2
-        | My mood
-      .input-group.py-5
-        .form-outline
-          input#song-search.form-control(type='search')
-          #autocom-box.list-group
-            //
-              <a href="#" class="list-group-item list-group-item-action">Dapibus ac facilisis in</a>
-        button#search-btn.btn.btn-primary(type='button')
-          span
-            img#search-icon(src='./images/search_icon.png')
-      #song-picks.row.align-items-top
-      button#submitBtn.btn.btn-primary.d-none(type='button') Submit
-    #infoModal.modal(tabindex='-1' role='dialog' aria-labelledby='exampleModalLabel' aria-hidden='true')
-      .modal-dialog(role='document')
-        .modal-content
-          .modal-header
-            h5.modal-title Modal title
-          .modal-body
-            | ...
-          .modal-footer
-            .btn-group 
-              button#removeBtn.btn.btn-warning.px-10(type="button") Remove Song
-              button#previewBtn.btn.btn-outline-info(type="button") Preview Song
-            audio#previewAudio(preload='auto')
-    .col-4
-      | Column
-script(src='javascripts/js.js')
-script(src='https://unpkg.com/axios/dist/axios.min.js')
-script(src='https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js' integrity='sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM' crossorigin='anonymous')
+extends layout.pug
+
+block content
+  .container.bg-light
+    .row.align-items-center
+      .col-8
+        h2.display-2
+          | My mood
+        .input-group.py-5
+          .form-outline
+            input#song-search.form-control(type='search')
+            #autocom-box.list-group
+              //
+                <a href="#" class="list-group-item list-group-item-action">Dapibus ac facilisis in</a>
+          button#search-btn.btn.btn-primary(type='button')
+            span
+              img#search-icon(src='./images/search_icon.png')
+        #song-picks.row.align-items-top
+        button#submitBtn.btn.btn-primary.d-none(type='button') Submit
+      #infoModal.modal(tabindex='-1' role='dialog' aria-labelledby='exampleModalLabel' aria-hidden='true')
+        .modal-dialog(role='document')
+          .modal-content
+            .modal-header
+              h5.modal-title Modal title
+            .modal-body
+              | ...
+            .modal-footer
+              .btn-group 
+                button#removeBtn.btn.btn-warning.px-10(type="button") Remove Song
+                button#previewBtn.btn.btn-outline-info(type="button") Preview Song
+              audio#previewAudio(preload='auto')
+      .col-4
+        #text-box.form-group.d-none
+          textarea#form-content.form-control(rows="3",placeholder="text")
+        #text-btn.button.btn.btn-primary(type="button") Add optional text
+
