--- a/views/layout.pug
+++ b/views/layout.pug
@@ -4,20 +4,25 @@ html
     link(href='https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css' rel='stylesheet' integrity='sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC' crossorigin='anonymous')
     link(rel='stylesheet' href='/stylesheets/style.css')
     script(src='https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js')
+    script(src='https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js' integrity='sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM' crossorigin='anonymous')
   header.fixed-top
     nav.navbar.navbar-expand-lg.bg-light
       .container-fluid
         ul.nav.nav-pills
           li.nav-item
-            a.nav-link.active(aria-current='page' href='/') My Mood-Four
+            a.nav-link.active(aria-current='page' href='/') Music Entry
           li.nav-item
             a.nav-link(href='#') Explore
+          li.nav-item
+            a.nav-link(href='/listen') Listen
         ul#right-bar.nav.float-right
           li.nav-item
             a.nav-link(href=href) #{message}
   block content
   
+
+
   script(src='https://unpkg.com/axios/dist/axios.min.js')
   script(src='javascripts/js.js')
   script(src='javascripts/profile.js')
-  script(src='https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js' integrity='sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM' crossorigin='anonymous')
+  script(src='javascripts/listen.js')
