mood search switched to tag search, working efficient search method for selected mood tags

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -62,3 +62,8 @@ a {
   background: #04AA6D; /* Green background */
   cursor: pointer; /* Cursor on hover */
 }
+
+.btn-no-outline:focus {
+  outline: none;
+  box-shadow: none;
+}
