--- a/views/listen.pug
+++ b/views/listen.pug
@@ -7,7 +7,7 @@ block content
                 h5.text-center The Chain 
                 h6.text-center.text-muted By Fleetwood Mac
                 img#cover(src="https://is4-ssl.mzstatic.com/image/thumb/Music124/v4/4d/13/ba/4d13bac3-d3d5-7581-2c74-034219eadf2b/081227970949.jpg/100x100bb.jpg")
-                button#play-btn.btn.btn-info-outline(state="paused")
+                button#play-btn.btn.btn-info-outline.btn-no-outline(state="paused")
                     span
                         img#play-btn-img(src='./images/play_button.ico')
                 .slide-container
