working song suggestions in mood

--- a/views/index.pug
+++ b/views/index.pug
@@ -51,6 +51,7 @@ block content
                     label#surprise.btn.btn-outline-primary.mood-btn
                         input(type='checkbox' name='options' autocomplete='off')
                         |   Surprise
+        #mood-sugg.overflow-auto
         #song-input.input-group.my-2
           .form-outline
             input#song-search.form-control(type='search',placeholder="Search by song")
