--- a/views/listen.pug
+++ b/views/listen.pug
@@ -16,38 +16,38 @@ block content
         #mood-wrapper.d-flex.justify-content-center 
             btn-group.btn-group-toggle(data-toggle='buttons')
                 .col.d-flex.justify-content-center.py-2
-                    label#joy.btn.btn-outline-primary
+                    label#joy.btn.btn-outline-primary.btn-mood-select
                         input#asdf(type='checkbox' name='options' autocomplete='off')
                         |   Joy
-                    label#sad.btn.btn-outline-primary
+                    label#sad.btn.btn-outline-primary.btn-mood-select
                         input(type='checkbox' name='options' autocomplete='off')
                         |   Sad
-                    label#stressed.btn.btn-outline-primary
+                    label#stressed.btn.btn-outline-primary.btn-mood-select
                         input(type='checkbox' name='options' autocomplete='off')
                         |   Stressed
-                    label#anger.btn.btn-outline-primary
+                    label#anger.btn.btn-outline-primary.btn-mood-select
                         input(type='checkbox' name='options' autocomplete='off')
                         |   Anger
-                    label#confidence.btn.btn-outline-primary
+                    label#confidence.btn.btn-outline-primary.btn-mood-select
                         input(type='checkbox' name='options' autocomplete='off')
                         |   Confidence
-                    label#shame.btn.btn-outline-primary
+                    label#shame.btn.btn-outline-primary.btn-mood-select
                         input(type='checkbox' name='options' autocomplete='off')
                         |   Shame
                 .col.d-flex.justify-content-center 
-                    label#jealousy.btn.btn-outline-primary
+                    label#jealousy.btn.btn-outline-primary.btn-mood-select
                         input(type='checkbox' name='options' autocomplete='off')
                         |   Jealousy
-                    label#loneliness.btn.btn-outline-primary
+                    label#loneliness.btn.btn-outline-primary.btn-mood-select
                         input(type='checkbox' name='options' autocomplete='off')
                         |   Loneliness
-                    label#fear.btn.btn-outline-primary
+                    label#fear.btn.btn-outline-primary.btn-mood-select
                         input(type='checkbox' name='options' autocomplete='off')
                         |   Fear
-                    label#relaxed.btn.btn-outline-primary
+                    label#relaxed.btn.btn-outline-primary.btn-mood-select
                         input(type='checkbox' name='options' autocomplete='off')
                         |   Relaxed
-                    label#surprise.btn.btn-outline-primary
+                    label#surprise.btn.btn-outline-primary.btn-mood-select
                         input(type='checkbox' name='options' autocomplete='off')
                         |   Surprise
         h5#dyn-text.text-muted.d-flex.justify-content-center This song makes me feel
